services/draw/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: drawio
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
