services/draw/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drawio
  namespace: drawio
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  rules:
    - host: drawio.k8s.fhardy.fr
      http:
        paths:
          - backend:
              serviceName: drawio
              servicePort: 80
            path: /
  tls:
    - hosts:
        - drawio.k8s.fhardy.fr
      secretName: drawio-tls
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: drawio
  name: drawio
  namespace: drawio
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: drawio
